--- a/app/src/main/res/layout/activity_mcqs_result.xml
+++ b/app/src/main/res/layout/activity_mcqs_result.xml
@@ -27,7 +27,7 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_marginTop="8dp"
-                android:src="@drawable/unattempted_answer_sign"
+                android:src="@drawable/percentage"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -89,7 +89,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/points_result_activity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="20dp"
